<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".module.AddModuleFragment">

        <EditText
            android:id="@+id/addModuleName"
            android:layout_width="match_parent"
            android:layout_height="79dp"
            android:fontFamily="@font/arapey"
            android:textAlignment="center"
            android:textSize="@dimen/standardfontsize"
            android:textStyle="bold"
            android:hint="@string/enter_module_hint"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/addtextModuleType"
            android:layout_width="match_parent"
            android:layout_height="79dp"
            android:fontFamily="@font/arapey"
            android:textAlignment="center"
            android:textSize="@dimen/standardfontsize"
            android:textStyle="bold"
            android:hint="@string/enter_module_type_hint"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.538"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.604" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/addButton"
            android:layout_width="match_parent"
            android:layout_height="@dimen/standardheight"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_margin="@dimen/standardmargin"
            android:layout_marginEnd="16dp"
            android:background="@drawable/normalbutton"
            android:textColor="@color/primaryTextColor"
            android:textSize="@dimen/standardfontsize"
            android:textStyle="bold"
            android:drawableRight="@drawable/ic_baseline_save_24"
            android:text="@string/add_module"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addModuleName" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>